--- a/ClientWrkSite.html
+++ b/ClientWrkSite.html
@@ -1,4 +1,5 @@
 <!--I need some sites so I can at least look at my servers work-->
+<!--How can I get you to post something and have it on yo orgin page-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +12,15 @@
 </head>
 <body>
     <h2>You should be able to read this</h2>
+    <div class="postButton" aref="apawPic">
+        <input type="button" href="#paw"><a class="paw">paws</a>
+        <div class="print">
+            <a class="paw1"></a>
+            <a class="paw2"></a>
+            <a class="paw3"></a>
+            <a class="paw4"></a>
+        </div>
+    </div>
     <div class="SearchBar">
         <a class="active" href="#home"></a>Home<!--# is a name anchor-->
         <a href="#AccountOptions">Account Options</a>
