--- a/ClientWrkSite.html
+++ b/ClientWrkSite.html
@@ -1,5 +1,6 @@
 <!--I need some sites so I can at least look at my servers work-->
-<!--How can I get you to post something and have it on yo orgin page-->
+<!--How can I get you to post something and have it on yo orgin page
+ima basically make the home feed a randomized page of basically dms and videos you like-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,12 +14,12 @@
 <body>
     <h2>You should be able to read this</h2>
     <div class="postButton" aref="apawPic">
-        <input type="button" href="#paw"><a class="paw">paws</a>
+        <input type="button" href="#paw"><a href="#PostBox">paws</a>/*If you click it a box should show up*/
         <div class="print">
-            <a class="paw1"></a>
-            <a class="paw2"></a>
-            <a class="paw3"></a>
-            <a class="paw4"></a>
+            <a class="paw1"></a><!--This is setting-->
+            <a class="paw2"></a><!--This is to the search page-->
+            <a class="paw3"></a><!--Just a feed page-->
+            <a class="paw4"></a><!---->
         </div>
     </div>
     <div class="SearchBar">
@@ -26,6 +27,9 @@
         <a href="#AccountOptions">Account Options</a>
         <a href="#PageDets" >Page Details</a>
         <input type="text" placeholder="Search for NetSites">
+    </div>
+    <div class="PostBox"><!--ehat happens when you click it-->
+        <input type="text" placeholder="Whats on your mind">
     </div>
 </body>
     
